# slime_platformer

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  gitmodules  psuedo.code
res/config/: defaults.config
src/: main.cpp
src/menu/: menu.cpp  menu.hpp
src/menu/ui/: ui.hpp
src/splash/: splash.cpp  splash.hpp
